# ChangeLog for dev-ruby/celluloid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/celluloid/ChangeLog,v 1.11 2014/10/08 23:18:55 mrueg Exp $

  08 Oct 2014; Manuel Rüger <mrueg@gentoo.org> celluloid-0.15.2-r2.ebuild:
  Fix dependency on dev-ruby/timers. Fixes bug #524782.

  27 Aug 2014; Manuel Rüger <mrueg@gentoo.org> celluloid-0.15.2-r2.ebuild:
  Add ruby21 target.

  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  celluloid-0.15.2-r2.ebuild:
  Keyword ~ppc and ~ppc64, bug #519596

  31 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -celluloid-0.15.2-r1.ebuild:
  Cleanup old.

*celluloid-0.15.2-r2 (18 Nov 2013)

  18 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +celluloid-0.15.2-r2.ebuild:
  Install also spec folder, as needed by dev-ruby/listen.

*celluloid-0.15.2-r1 (11 Nov 2013)

  11 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +celluloid-0.15.2-r1.ebuild,
  -celluloid-0.12.4.ebuild, -celluloid-0.13.0.ebuild, -celluloid-0.14.1.ebuild,
  -celluloid-0.15.1.ebuild, -celluloid-0.15.2.ebuild:
  Add ruby20 target. Cleanup old.

*celluloid-0.15.2 (09 Oct 2013)

  09 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +celluloid-0.15.2.ebuild:
  Version bump.

*celluloid-0.15.1 (07 Sep 2013)

  07 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +celluloid-0.15.1.ebuild:
  Version bump.

*celluloid-0.14.1 (13 Jul 2013)

  13 Jul 2013; Hans de Graaff <graaff@gentoo.org> +celluloid-0.14.1.ebuild:
  Version bump.

*celluloid-0.13.0 (30 Apr 2013)

  30 Apr 2013; Hans de Graaff <graaff@gentoo.org> +celluloid-0.13.0.ebuild:
  Version bump.

*celluloid-0.12.4 (14 Dec 2012)

  14 Dec 2012; Hans de Graaff <graaff@gentoo.org> +celluloid-0.12.4.ebuild,
  +metadata.xml:
  Initial import. New dependency for dev-ruby/adhearsion.