@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST celluloid-0.15.2-git.tgz 56118 SHA256 7f96b74baf99fb1924a712e7f27b2eca8c28bcc2565b943785f12b03d00703ad SHA512 6f3d781d72f1b298b205d7c64e0353b81c5df20aafe2b054f5e967c01a169bfa4317645e96d86d6cdb08b85de04bb221472d8233fe8e0b0745b125e901d6d213 WHIRLPOOL b3debcf29b2d6bbff7233a711af2e7ab2a8f67ac0878439ad0db2dcf11253c47e56c394f65849761c43fac9205762c1b9b06e985534e2b2f9590ebc63d20b8c4
-EBUILD celluloid-0.15.2-r2.ebuild 1006 SHA256 7314b69b6373fa842b391195482e862971ebc9000b751ecd41d8d16e68557f31 SHA512 aafa991ae577eb56a55f1fdb051df14707fcb0589bd8b9ebae95581818971a84b290f51d0aa602fe9bfc500f5f5f37034386e75e53cb727667629b2e912b5af4 WHIRLPOOL febb8c67985e6e2f542da0c16da30a5f49530c2aa1e475df9d0c37feff8f76972878e77f033fced18cf1518e14ff45e0fb0e233cd9486ff9f278f7f694c16c3e
-MISC ChangeLog 1796 SHA256 9a090ea2bd8eb7295d27f7a512898a2f5e94c23689048f93be6b35e421653a60 SHA512 69fd0a58c6076e573664f4acfefbdc6bc24089b02b1b4b835c60e3754c988451498b55bb734eb1f1970e8f25e4d2de9085387cc770e6f591be2dd016c2ed35fa WHIRLPOOL 69515e44fdcb9ffdf60cd01c87b1b10fc479e4d687e377699e43ba43a8a223b3501f0790e412e4606c95de5e79ac317f11211c3304cfcc955cd3c74c25bddc70
+EBUILD celluloid-0.15.2-r3.ebuild 1131 SHA256 fde42129d90cf515e26366e3c00a96d93b161e66a17f5c12c5a0c89bb2bbae25 SHA512 8a993a7ba6674aec3a3b32437f8c2e1152606d6771af8c795ce27cce9fbb7b2458d796a4ce14d9595837da338bfa8df71fe63775ba6c1e77c9a6c96b938f5c70 WHIRLPOOL 3fe8ea1e4e3931220c6aafa07ade231416ca66046e458cfd230be09de84a59ed3573586569ef7e51c26ce6ee9812f393d95bec472ed530c7125504ea7b6414eb
+MISC ChangeLog 2037 SHA256 62400e4002bd9f5f1e0cb9b16ca1296b4e77e6ffb0c6ed1bff560b2074f844e9 SHA512 3e35df77ae76f6fee2d3514f8a36e8ae25bdf04f830988c2bc93332d554a891c70bb9c7269cab79f29c22fa79dee1971e94c4dc43fc7c83e03f6189f9f119071 WHIRLPOOL f5ba649418ff71651dbff3c4c097dcd50927a1c50ed34d2314c46a263cee18805f77f8848edbc67e8666e9d49704739e88bfedf301c20615a9c67af6e49cedc8
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlRWAosACgkQiIP6VqMIqNeg2wD/QLpbcZCr9XhqM0WQFK/wX/HL
+LDZukrM5l9ex2/farUcA/2DIwnRlr04ziFFcrGtDKqRd7C6/x0b+C4gond29Tc/w
+=fo+s
+-----END PGP SIGNATURE-----
